--- a/Exercícios/ex022/style.css
+++ b/Exercícios/ex022/style.css
@@ -1,9 +1,26 @@
 @charset "utf-8";
 
+body{
+    background-image: url('imagens/wallpaper001.jpg');
+}
+
 div.quadrado{
+    display: inline-block;
     width: 300px;
     height: 300px;
-    border: 1px;
-    border: solid;
+    border: 2px solid black;
+    border-radius: 10px;
     border-color: black;
+}
+
+div#q1{
+    background-color: lightblue;
+}
+
+div#q2{
+    background-image: linear-gradient(to bottom, yellow,  red);
+}
+
+div#q3{
+    background-image: url('imagens/pattern001.png');
 }
