--- a/Exercícios/ex022/style006.css
+++ b/Exercícios/ex022/style006.css
@@ -8,11 +8,18 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+
+    /* Shorthand - background
+      devemos sempre colocar nessa ordem
+      color > image > position > [size] > attachment
+    */
+
 }
 
 main {
     background-color: white;
-    width: 400px;
+    max-width: 600px;
     padding: 10px;
     margin: auto;
     border: 1px solid black;
