--- a/Desafios/d012/stilos/style.css
+++ b/Desafios/d012/stilos/style.css
@@ -1,13 +1,26 @@
 @charset 'UTF-8';
 
+@import url('http://fonts.googleapis.com/css?family=Passion+One:wght@400;700;900&display=swap');
+
+
+@import url('http://fonts.googleapis.com/css?family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Srira',cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html,body{
     min-height: 100wh;
     background-color:darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -18,9 +31,11 @@ header{
 header > h1{
     padding: 50px;
     font-family: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 header > p{
-    padding: 50px;
+    padding: 5px;
 }
 header a, footer a {
     color: white;
@@ -35,7 +50,9 @@ section{
     padding-top:  10vh;
     padding-bottom: 10vh;
     line-height: 2em;
-    padding-left: 30px; 
+    padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3vw; 
 }
 
 section.normal{
@@ -48,8 +65,9 @@ section.imagem{
     color: white;
 }
 section.imagem > p {
-     width: 400px;
-     background-color: rgb(0, 0, 0.253);
+    display: inline-block;
+    padding: 10px; 
+    background-color: rgb(0, 0, 0.253);
 }
 
 
