--- a/Desafios/d012/stilos/style.css
+++ b/Desafios/d012/stilos/style.css
@@ -55,6 +55,10 @@ section{
     font-size: 3vw; 
 }
 
+section > p{
+    padding: 0.6em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -63,32 +67,27 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-attachment: fixed;
 }
 section.imagem > p {
     display: inline-block;
     padding: 10px; 
-    background-color: rgb(0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.300);
+    text-shadow: 1px 1px 0px black;
+
 }
 
+section#imagem01{
+   background-image: url('../imagens/background001.jpg');
+   background-position: right center;
+   background-size: cover;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+section#imagem02{
+   background-image: url('../imagens/background002.jpg');
+   background-size: cover;
+}  
 
 
 footer{
