--- a/Exercícios/ex026/mq002/estilos/paisagem.css
+++ b/Exercícios/ex026/mq002/estilos/paisagem.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
-/* Aparelho em pé (portrait)*/
+/* Aparelho em deitado (landscape)*/
 
 body{
-    background-color: green;
+background-image: url(../imagens/cev-landscape.jpg);
+background-position: left bottom;
+
 }
