--- a/Exercícios/ex026/mq004/estilos/meida-query.css
+++ b/Exercícios/ex026/mq004/estilos/meida-query.css
@@ -1,2 +1,70 @@
 @charset "UTF-8";
 /* Todas as demais midias */
+
+/* Typical Device Breakpoints
+-------------------------------
+Pequenas telas: até 600px
+celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
+
+@media print{/*IMPRESSÃO*/
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body{
+        background-image: url(../imagens/back-print.jpg);
+    }
+
+    main{
+        border-color: 2px solid black;
+    }
+
+    main{
+        text-shadow: none;
+        color: black;
+    }
+    img#phone{ display: none;}
+    img#tablet{display: none;}
+    img#print{display: block;}
+    img#pc{display: none;}
+    img#TV{display: none;}
+
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 899px) { /* TABLET*/
+   body{
+    background-image: url(../imagens/back-tablet.jpg);
+   }
+    img#phone{ display: none;}
+    img#tablet{display: block;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#TV{display: none;}
+}
+
+@media screen and (min-width: 900px) and (max-width:999px) { /* DESKTOP*/
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone{ display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: block;}
+    img#TV{display: none;}
+}
+
+@media screen and (min-width:1000px) { /* GRANDES TELAS*/
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone{ display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#TV{display: block;}
+}
